[package]
authors = ["Max Chung, Alex Liu, Royce Sato"]
description = "xperience epic adventures by THRUSTING some THRUSTERS into THRUSTEES https://THRUSTIN.rs. E"
edition = "2018"
license = "MIT"
name = "thrustin"
version = "1.0.1"

[dependencies]
chrono = "^0.4"
lazy_static = "^1.3.0"
mongodb = "^0.3.11"
rand = "^0.6.5"
regex = "^1.1.6"
rocket = "^0.4.1"
rust-argon2 = "^0.4.0"
serde_json = "^1.0.40"
ws = "^0.8.1"