[package]
authors = ["Max Chung, Alex Liu, Royce Sato"]
description = "xperience epic adventures by THRUSTING some THRUSTERS into THRUSTEES https://THRUSTIN.rs. E"
edition = "2018"
license = "MIT"
name = "thrustin"
version = "1.0.1"

[dependencies]
chrono = "^0.4"
dotenv = "^0.15.0"
lazy_static = "^1.3.0"
rand = "0.8.4"
regex = "^1.5.4"
rust-argon2 = "0.8.3"
serde_json = "^1.0.40"
ws = "0.9.1"

[dependencies.mongodb]
version = "^2.1.0"
default-features = false
features = ["sync","bson-chrono-0_4"]